chore(lint): fix `golangci-lint` warning after using latest version
- https://github.com/golangci/golangci-lint/issues/4733#issuecomment-2120389981

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,7 @@
 linters-settings:
   errcheck:
     check-type-assertions: true
+    ignore : ""
   goconst:
     min-len: 2
     min-occurrences: 3
